Fix nav bar - delete sign_up

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,9 +19,9 @@
                       <a class="page-scroll" href="#page-top"></a>
                   </li>
                   <% if user_signed_in? %>
-                    <li class='navbar-right'>
-                      <%= link_to('회원정보 수정하기', edit_user_registration_path) %>
-                    </li>
+                    <!--<li class='navbar-right'>-->
+                    <!--  <%#= link_to('회원정보 수정하기', edit_user_registration_path) %>-->
+                    <!--</li>-->
                     <li class='navbar-right'>
                       <%= link_to('로그아웃', destroy_user_session_path) %>
                     </li>
@@ -29,9 +29,9 @@
                     <li class='navbar-right'>
                       <%= link_to('로그인하기', new_user_session_path)  %>
                     </li>
-                    <li class='navbar-right'>
-                      <%= link_to('회원가입', new_user_registration_path)  %>
-                    </li>
+                    <!--<li class='navbar-right'>-->
+                    <!--  <%#= link_to('회원가입', new_user_registration_path)  %>-->
+                    <!--</li>-->
                   <% end %>
                   
                   <% if params[:controller] == 'locker' %>
