--- a/app/views/locker/selecting.html.erb
+++ b/app/views/locker/selecting.html.erb
@@ -8,12 +8,14 @@
 
 <!--국제경영-->
     <% if current_user.major.mname == "국제경영" %>
-      <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
-        <%= image_tag "iba.jpg", style: "width: 100%;" %>
+      <div class='row'>
+        <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
+          <%= image_tag "iba.jpg", style: "width: 100%;" %>
+        </div>
       </div>
       
       <div class='row'>
-        <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'>
+        <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4' style="margin: 55px 0px;">
           <table class="table table-bordered">
             <tbody>
               <% 1.upto(4) do |x| %>
@@ -45,7 +47,7 @@
         <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'>
           <table class="table table-bordered">
             <tbody>
-              <% 1.upto(4) do |x| %>
+              <% 1.upto(5) do |x| %>
               <tr>
               
                 <% if Locker.where(lnum: 4 + ( 11 * ( x  - 1 ))).take.nil? %>
@@ -80,7 +82,7 @@
         <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'>
           <table class="table table-bordered">
             <tbody>
-              <% 1.upto(4) do |x| %>
+              <% 1.upto(5) do |x| %>
               <tr>
               
                 <% if Locker.where(lnum: 8 + ( 11 * ( x  - 1 ))).take.nil? %>
@@ -124,7 +126,7 @@
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <table class="table table-bordered">
             <tbody>
-              <% 1.upto(4) do |x| %>
+              <% 1.upto(6) do |x| %>
               <tr>
               
                 <% if Locker.where(major_id: 2,lnum: 1 + ( 11 * ( x  - 1 ))).take.nil? %>
@@ -171,7 +173,7 @@
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <table class="table table-bordered">
             <tbody>
-              <% 1.upto(4) do |x| %>
+              <% 1.upto(6) do |x| %>
               <tr>
                 <% if Locker.where(major_id: 2, lnum: 7 + ( 11 * ( x  - 1 ))).take.nil? %>
                   <td><%= link_to "#{ 7 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 7 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
