--- a/app/views/locker/reject.html.erb
+++ b/app/views/locker/reject.html.erb
@@ -5,7 +5,5 @@
       <% end %>
     </div>
     <h1> 사물함을 얻지 못했습니다</h1>
-    <h3> <%= current_user.my_num %>번째로 버튼을 클릭하셨습니다.</h3>
-    <h3> 제한선 : <%= current_user.major.locker_limit %> </h3>
-    <p>Find me in app/views/locker/reject.html.erb</p>
+    <h3> 제한 인원 <%= current_user.major.locker_limit %>명 <br><br> <%= current_user.my_num %>번째로 버튼을 클릭하셨습니다.</h3>
 </div>
