--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -71,10 +71,19 @@
         
         </tbody>
     </table>
-
-
-<%= link_to "현황 보기", book_manage_path %>
-
+<br>
+<div class="col-md-8"></div>
+<div class="col-md-4">
+  <%= link_to "/book/manage", method: "get" do %>            
+    <%= button_tag "현황보기", class: "locker-button" %>
+  <% end %>
+&nbsp
+&nbsp
+&nbsp
+  <%= link_to "/home/index", method: "get" do %>            
+    <%= button_tag "저장하기", class: "locker-button" %>
+  <% end %>
+</div>
 </div>
 
 
