--- a/app/views/book/manage.html.erb
+++ b/app/views/book/manage.html.erb
@@ -28,4 +28,18 @@
         
         </tbody>
     </table>
+<div class="col-md-8"></div>
+<div class="col-md-4">
+<%= link_to "/book/index", method: "get" do %>            
+  <%= button_tag "이전으로", class: "locker-button" %>
+<% end %>
+&nbsp
+&nbsp
+&nbsp
+<%= link_to "/home/index", method: "get" do %>            
+  <%= button_tag "저장하기", class: "locker-button" %>
+<% end %>
+&nbsp
+</div>
+    
 </div>
