index page major name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
       </tr>
     
         <tr id="spacer1">
-            <td align="center" class="title"><p><전공이름>의 책 대여 사업은</p></td> 
+            <td align="center" class="title"><p><%= current_user.major.mname%>의 책 대여 사업은</p></td> 
             <td align="right" ><div class="numbers" id="dday"></div></td>
             <td align="center" class="title" style="width:30px;"><p>일</p></td>
             <td align="right" ><div class="numbers" id="dhour"></div></td>
