--- a/app/views/locker/selecting.html.erb
+++ b/app/views/locker/selecting.html.erb
@@ -18,23 +18,49 @@
         <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4' style="margin: 55px 0px;">
           <table class="table table-bordered">
             <tbody>
-              <% 1.upto(4) do |x| %>
+            <!-- gba table START -->
+              <% 1.upto(2) do |x| %>
               <tr>
               
-                <% if Locker.where(lnum: 1 + ( 11 * ( x  - 1 ))).take.nil? %>
-                  <td><%= link_to "#{ 1 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 1 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
+                <% if Locker.where(lnum: 1 + ( 11 * ( x  - 1 ))).take.nil? && current_user.gba %>
+                  <td style="border: 5px solid yellow;"><%= link_to "#{ 1 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 1 + ( 11 * ( x  - 1 ))}"), method: :post %></td>                
                 <% else %>
                   <td class='red-box'>X</td>
                 <% end %>
                 
-                <% if Locker.where(lnum: 2 + ( 11 * ( x  - 1 ))).take.nil? %>
-                  <td><%= link_to "#{ 2 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 2 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
+                <% if Locker.where(lnum: 2 + ( 11 * ( x  - 1 ))).take.nil? && current_user.gba %>
+                  <td style="border: 5px solid yellow;"><%= link_to "#{ 2 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 2 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
                 <% else %>
                   <td class='red-box'>X</td>
                 <% end %>
                 
-                <% if Locker.where(lnum: 3 + ( 11 * ( x  - 1 ))).take.nil? %>
-                  <td><%= link_to "#{ 3 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 3 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
+                <% if Locker.where(lnum: 3 + ( 11 * ( x  - 1 ))).take.nil? && current_user.gba %>
+                  <td style="border: 5px solid yellow;"><%= link_to "#{ 3 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 3 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
+                <% else %>
+                  <td class='red-box'>X</td>
+                <% end %>
+                
+              </tr>
+              <% end %>
+            <!--gba table END-->
+              
+              <% 1.upto(2) do |x| %>
+              <tr>
+              
+                <% if Locker.where(lnum: 23 + ( 11 * ( x  - 1 ))).take.nil? %>
+                  <td><%= link_to "#{ 23 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 23 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
+                <% else %>
+                  <td class='red-box'>X</td>
+                <% end %>
+                
+                <% if Locker.where(lnum: 24 + ( 11 * ( x  - 1 ))).take.nil? %>
+                  <td><%= link_to "#{ 24 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 24 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
+                <% else %>
+                  <td class='red-box'>X</td>
+                <% end %>
+                
+                <% if Locker.where(lnum: 25 + ( 11 * ( x  - 1 ))).take.nil? %>
+                  <td><%= link_to "#{ 25 + ( 11 * ( x  - 1 )) }", locker_lockerselect_path( :lnum => "#{ 25 + ( 11 * ( x  - 1 ))}"), method: :post %></td>
                 <% else %>
                   <td class='red-box'>X</td>
                 <% end %>
@@ -115,11 +141,14 @@
           </table>
         </div>
       </div>
+      
 <!--모바일-->
     <% elsif current_user.major.mname == "모바일" %>
       
-      <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
-        <%= image_tag "mobile.jpg", style: "width: 100%;" %>
+      <div class='row'>
+        <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
+          <%= image_tag "mobile.jpg", style: "width: 100%;" %>
+        </div>
       </div>
       
       <div class='row'>
