tiny thing(a letter from the first page)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,7 +30,7 @@
             <td align="center" class="title" style="width:30px;"><p>분</p></td>
             <td align="right" ><div class="numbers" id="dsec"></div></td>
             <td align="center" class="title" style="width:30px;"><p>초</p></td>
-            <td align="center" class="title"><p>에 열립니다.</p></td> 
+            <td align="center" class="title"><p>&nbsp후에 열립니다.</p></td> 
             <td align="center">
               &nbsp&nbsp&nbsp&nbsp<%= link_to("/home/index") do %><%= image_tag("refresh.png", width: "40") %> <% end %>
             </td>
