Fix first_check controller error

--- a/app/views/locker/selecting.html.erb
+++ b/app/views/locker/selecting.html.erb
@@ -10,7 +10,7 @@
     <% if current_user.major.mname == "국제경영" %>
       <div class='row'>
         <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
-          <%= image_tag "iba.jpg", style: "width: 100%;" %>
+          <%= image_tag "iba.png", style: "width: 100%;" %>
         </div>
       </div>
       
