Fix image name erorr - jpg->png

--- a/app/views/locker/selecting.html.erb
+++ b/app/views/locker/selecting.html.erb
@@ -264,7 +264,7 @@
       
       <div class='row'>
         <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
-          <%= image_tag "mobile.jpg", style: "width: 100%;" %>
+          <%= image_tag "mobile.png", style: "width: 100%;" %>
         </div>
       </div>
       
