--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,11 +35,12 @@
       <% end %><br />
       <%= f.password_field :password, autocomplete: "off", class: "form-control password" %>
     </div>
-  
+  <!--
     <div class="form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control password" %>
+      <%#= f.label :password_confirmation %><br />
+      <%#= f.password_field :password_confirmation, autocomplete: "off", class: "form-control password" %>
     </div>
+  -->
   
     <div class="form-group">
       <%= f.submit "Sign up", class: "submit" %>
