--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,9 +26,9 @@
                       <%= link_to('로그아웃', destroy_user_session_path) %>
                     </li>
                   <% else %>
-                    <li class='navbar-right'>
-                      <%= link_to('로그인하기', new_user_session_path)  %>
-                    </li>
+                    <!--<li class='navbar-right'>-->
+                    <!--  <%#= link_to('로그인하기', new_user_session_path)  %>-->
+                    <!--</li>-->
                     <!--<li class='navbar-right'>-->
                     <!--  <%#= link_to('회원가입', new_user_registration_path)  %>-->
                     <!--</li>-->
