--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
     
         <tr id="spacer1">
          
-          <% if current_user.nil? %>
+          <%# if current_user.nil? %>
             <td align="center" class="title">
               <p>사물함 대여 사업은</p>
             </td> 
@@ -31,11 +31,11 @@
             <td align="center">
               &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to("/home/index") do %><%= image_tag("refresh.png", width: "40") %> <% end %>
             </td>
-         <% else %>
-            <td align="center" class="title">
-              <p>국제학부 책 대여 & 사물함 프로젝트에 오신 것을 환영합니다~!</p>
-            </td>
-          <% end %>
+         <!--<%# else %>-->
+         <!--   <td align="center" class="title">-->
+         <!--     <p>국제학부 책 대여 & 사물함 프로젝트에 오신 것을 환영합니다~!</p>-->
+         <!--   </td>-->
+         <!-- <%# end %>-->
         </tr>
         <!--
         <tr id="spacer2">
@@ -60,8 +60,8 @@
   
   <div class="col-xs-12 col-md-12 col-lg-12 text-center" id="locker_button">
   <!--<div class="col-xs-6 col-md-6 col-lg-6 text-center" id="locker_button">-->
-    <!--<%#= link_to(locker_index_path) do %> <%#= image_tag "lockers.png", class: "center-block img-responsive img-circle hoverable" %><%# end %>
-    <%#= link_to(locker_index_path) do %><h4>사물함 신청</h4><%# end %>-->
+    <%= link_to(locker_index_path) do %> <%= image_tag "lockers.png", class: "center-block img-responsive img-circle hoverable" %><% end %>
+    <%= link_to(locker_index_path) do %><h4>사물함 신청</h4><% end %>
   </div>
   
 </div>
