--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,11 +36,11 @@
                   
                   <% if params[:controller] == 'locker' %>
                     <li class='navbar-right'>
-                      <%= link_to('중고책 서비스',  book_index_path) %>
+                      <%#= link_to('중고책 서비스',  book_index_path) %>
                     </li>
                   <% elsif params[:controller] == 'book' %>
                     <li class='navbar-right'>
-                      <%= link_to('사물함 서비스', locker_index_path) %>
+                      <%#= link_to('사물함 서비스', locker_index_path) %>
                     </li>
                   <% elsif params[:controller] == 'home' %>
                   <% end %>
