--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,8 +60,8 @@
   
   <div class="col-xs-12 col-md-12 col-lg-12 text-center">
   <!--<div class="col-xs-6 col-md-6 col-lg-6 text-center" id="locker_button">-->
-    <%#= link_to(locker_index_path) do %> <%#= image_tag "lockers.png", class: "center-block img-responsive img-circle hoverable" %><%# end %>
-    <%#= link_to(locker_index_path) do %><h4>사물함 신청</h4><%# end %>
+    <%= link_to(locker_index_path) do %> <%= image_tag "lockers.png", class: "center-block img-responsive img-circle hoverable" %><% end %>
+    <%= link_to(locker_index_path) do %><h4>사물함 신청</h4><% end %>
   </div>
   
 </div>
